Update and rename Login.html to index.html

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
            <input type="password" type="text">
            <div class="fotgetpassword"><a href="#">forget password?</a></div>
            <div class="submit" ><a  id="submitted"  href="#">Submit</a></div>
-           <div class="newuser">New User? <a href="signup.html">Register here</a></div>
+           <div class="newuser">New User? <a href="new/signup.html">Register here</a></div>
         </div>
            
         </div>
